--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,5 +1,17 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
+body {
+  background-color: #140022;
+}
+
+footer {
+  padding: 20px 0 10px;
+  background-color: #140022;
+  color: rgb(235, 228, 228);
+  text-align: center;
+  font-size: 12px;
+}
+
 .errorMessage {
   margin-bottom: 0;
   color: red;
